# audiomarker

./: .gitignore  CMakeLists.txt  README.md  go.mod  go.sum  imgui.ini  main.go
src/: audio_processor.cpp  audio_processor.h  main.cpp
